2007-01-31 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (isValidIdChar,bankCompare): fuzzy matching of
	    operand names, handles name and (name + n) for all n,
	  (sameBank): restructured, also check bank allocation policy,
	* src/pic/glue.c (emitPseudoStack): fixed printf arguments,
	  (pic14_operandsAllocatedInSameBank): check whether to operands
	    will be allocated into the same bank (i.e., section) to reduce
	    BANKSEL overhead, queried from pcode.c:sameBank,
	  (pic14printLocals): reintroduced clustering registers into a single
	    section: all compiler generated symbols will now reside in one
	    bank (per file), reducing BANKSEL overhead and code size,
	  (showAllMemmaps): use local dbuf where possible

2007-01-29 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (popGetExternal): simplified, mark symbol as used,
	  (call_libraryfunc): retrieve/create symbol and mark as used,
	  (genFunction): mark defined functions as non-extern and add again
	   to code memmap for later output
	* src/pic/glue.c (emitPseudoStack): put into own subroutine,
	  (pic14printLocals): reworked for new symbol emission,
	  (emitIfNew,pic14_constructAbsMap,emitIvalLabel,emitIvals,emitInitVal,
	  showAllMemmaps): reworked symbol output using dbufs, added handling
	    of string literals (still incomplete),
	  (picglue): removed symbol emission, moved into showAllMemmaps,
	  (emitSymbolSet): new workhorse for symbol output,
	  (pic14emitMaps,pic14printPublics,pic14printExterns): commented out

2007-01-29 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/SDCCutil.c: dbuf_splitFile: file extension
	  component contains the extension separator.

2007-01-28 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdutil.cc: NUL device is detected as CG_FILE type
	  on WIN32
	* src/SDCCdwarf2.c, src/SDCCglobl.h, src/SDCCmain.c, src/SDCCutil.c,
	  src/SDCCutil.h, src/avr/gen.c, src/ds390/gen.c, src/hc08/gen.c,